--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "download-tarball": "^2.0.0",
+    "esbuild": "^0.13.12",
+    "next": "12.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.34",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2"
   }
